--- a/different-react-versions/app1/package.json
+++ b/different-react-versions/app1/package.json
@@ -11,7 +11,7 @@
     "html-webpack-plugin": "5.3.2",
     "serve": "12.0.1",
     "webpack": "5.61.0",
-    "webpack-cli": "4.8.0",
+    "webpack-cli": "^4.9.0",
     "webpack-dev-server": "4.2.1"
   },
   "scripts": {
