--- a/redux-reducer-injection/app1/package.json
+++ b/redux-reducer-injection/app1/package.json
@@ -15,7 +15,7 @@
     "html-webpack-plugin": "5.3.2",
     "serve": "12.0.1",
     "webpack": "5.61.0",
-    "webpack-cli": "4.8.0",
+    "webpack-cli": "^4.9.0",
     "@babel/core": "7.15.5",
     "@babel/preset-react": "7.14.5"
   },
